# kairon

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  ETH_1W_tradingview_coinmarketcap.csv  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
artifacts/: asset_manifest.json  break_even_w2.json  cost_sensitivity_w2.json  evidence_table.json  w10_state.json  w1_1_status.json  w1_2_status.json  w1_3_status.json  w1_4_status.json  w1_5_status.json  w1_6_status.json  w1_state.json  w2_1_status.json  w2_2_status.json  w2_3_status.json  w2_5_decision.json  w2_5_status.json  w3_1_status.json  w3_2_status.json  w3_3_status.json  w3_4_gate_state.json  w3_4_status.json  w3_5_status.json  w3_6_status.json  w3_7_status.json  w3_batch_prd_update.py  w5_1_status.json  w5_2_status.json  w5_3_status.json  w5_gate_state.json  w6_1_status.json  w6_2_status.json  w6_3_pareto.json  w6_3_status.json  w6_4_status.json  w6_5_status.json  w6_state.json  w7_1_status.json  w7_2_status.json  w7_3_status.json  (+7 more)
artifacts/w0/: baseline_tests.json  decision.json
configs/models/: default.yaml
data/: acquisition_report.json  runs.db
docs/: PRODUCTION.md  api_dataset_library_catalog.md  architecture.md  asset_inventory.md  benchmark_plan.md  best_practice_blueprint.md  dataset_audit.md  evaluation_framework.md  executive_summary.md  external_research.md  implementation_roadmap.md  information_architecture.md  literature_matrix.md  literature_review.md  milestones.md  objective_and_metrics.md  product_requirements.md  recommended_data_stack.md  repo_structure.md  user_flows.md
docs/adr/: 0001-uv-pyright-strict-pydantic-v2.md  0002-walkforward-purged-embargo-evaluation.md  0003-architecture-diverse-ensemble.md  0004-confidence-thresholded-inference.md  0005-llm-as-reasoning-not-numeric-oracle.md  0006-cost-aware-by-default.md  0007-strict-static-typing-at-boundaries.md  0008-no-llm-for-numeric-prediction-or-evaluation.md  0009-bocpd-regime-detector.md
enhance/: glm.md  kimi.md  preplexity.md  qwen.md
paper/: __init__.py  ablation_results.json  ablation_study.py  aggregate_results.py  all_results.json  experiments.json  experiments_diagnostic.json  experiments_structured.json  paper.md  real_data_experiment.py  real_results.json  research.tex  run_ablation.py  run_experiments.py  run_experiments_diagnostic.py  run_experiments_structured.py  run_real_experiments.py
paper/figures/: __init__.py  fig_ablation_comparison.py  fig_break_even.py  fig_calibration.py  fig_candlestick_signals.py  fig_confusion_matrices.py  fig_cost_sensitivity.py  fig_coverage_accuracy.py  fig_equity_curves.py  fig_loss_comparison.py  fig_model_comparison.py  fig_regime_detection.py  generate_all.py
reports/: BTC_1W_20260609_analysis.md  BTC_1w_20260608_analysis.md  ETH_1W_20260609_analysis.md  ETH_1w_20260608_analysis.md  break_even_w2.md  cost_sensitivity_w2.md  coverage_pareto_w4.json  decision_analysis_20260616_070402.md  decision_analysis_20260618_063205.md  e2e_btc_1h_w8.md  e2e_btc_5m_w8.md  growth_20260618_135124.md  growth_20260618_135629.md  pareto_compare_w6.md  scalping_20260619_062741.md  scalping_20260619_063717.md  scalping_20260619_065404.md  scalping_20260619_071228.md  scalping_20260619_072001.md  scalping_20260619_072835.md  scalping_20260619_083443.md  scalping_20260619_142231.md  scalping_20260619_143034.md  scalping_20260619_145554.md  scalping_20260619_153417.md  scalping_20260622_054755.md  scalping_20260622_060501.md  scalping_20260622_090849.md  scalping_edge_phase2.md  scalping_edge_phase3.md  scalping_edge_phase4_compounding_20260622_065930.md  scalping_edge_phase4_orderflow_ab.md  scalping_edge_phase4_walkforward.md  testnet_20min_20260615_120530.md  testnet_30min_btc_eth_20260616_070402.md  testnet_30min_btc_eth_20260618_063205.md  w0_fallback.md  w10_final_report.md  w1_1_network_unavailable.md  w1_2_stub_rationale.md  (+2 more)
researches/: 13028_Advancing_Algorithmic_Tr.md  2024.emnlp-main.63.md  2407.16103v2.md  2407.18957v4.md  2408.06361v2.md  2510.19173v1.md  2602.00080v1.md  2606.00060v1.md  frai-09-1722121.md
runs/0ef57900e97d/: input.csv
runs/4a2856037f06/: input.csv
runs/61d8cf7628d8/: input.csv
runs/86a9db520cc7/: input.csv
runs/941c7ef0799d/: input.csv
runs/9cdf94fca226/: input.csv
runs/d7a447e29fcf/: input.csv
runs/e050a9539551/: input.csv
runs/f005edc4a897/: input.csv
runs/fb6700119fcf/: input.csv
scripts/: __init__.py  analyze_session_decisions.py  analyze_symbol_edge.py  bybit_hmac_check.py  check_no_any_in_web.py  close_residual_position.py  debug_bybit_ccxt.py  debug_bybit_pybit.py  debug_bybit_raw.py  download_real_data.py  fetch_history.py  predict_weekly.py  preflight_testnet.py  run_break_even.py  run_cost_sensitivity.py  run_coverage_curve.py  run_e2e.py  run_growth_session.py  run_pareto_compare.py  run_scalping_session.py  run_session.py  run_testnet_20min.py  run_testnet_30min_btc_eth.py  run_testnet_symbol.py  smoke_test_paper.py  technical_analysis_report.py  walkforward_sol.py
src/kairon/: __init__.py  py.typed
tests/: __init__.py  conftest.py  test_smoke.py
tests/analysis/: test_contracts.py  test_horizon_profiles.py
tests/api/: test_app.py  test_dto.py  test_live_sse.py  test_public_api.py  test_web_back_navigation.py  test_web_routes.py  test_web_run_pipeline.py  test_web_upload.py
tests/backtest/: test_cost.py  test_cost_regime_coupling.py  test_engine.py  test_fidelity_gate.py  test_impact.py  test_metrics.py  test_scalping_engine.py  test_setup_analysis.py  test_statistics.py
tests/cli/: test_trade_broker_selection.py  test_trade_cli.py
tests/config/: test_settings.py
tests/data/: test_calendar.py  test_ccxt_adapter.py  test_diagnostics.py  test_fred.py  test_history_fetch.py  test_history_store.py  test_ingestion.py  test_io.py  test_partitioning.py  test_symbols.py  test_us_equity_ws.py
tests/evaluation/: __init__.py  test_break_even.py  test_cost_sensitivity.py  test_coverage_curve.py  test_eta_calibration.py  test_oof.py  (+2 more)
(+267 files in other folders)
