[project]
name = "kairon"
version = "0.1.0"
description = "Kairon — strictly-typed, cost-aware, walk-forward-validated AI market analysis and prediction platform"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [
    { name = "Kairon Team" }
]
keywords = ["finance", "trading", "machine-learning", "time-series", "crypto", "stocks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

dependencies = [
    # IO / data
    "polars>=1.0",
    "pyarrow>=18.0",
    "duckdb>=1.1",
    "orjson>=3.10",
    # HTTP
    "httpx>=0.27",
    "tenacity>=9.0",
    # Validation
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    # Numerics / ML
    "numpy>=2.0",
    "scipy>=1.14",
    "scikit-learn>=1.5",
    "pandas>=2.2",
    # Logging
    "loguru>=0.7",
    # LLM
    "ollama>=0.4",
    # Exchange data
    "ccxt>=4.4",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.115",
    "ruff>=0.7",
    "pyright>=1.1.390",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "ipykernel>=6.29",
    "respx>=0.21",
    "scikit-learn>=1.5",
]

ml = [
    "xgboost>=2.1",
    "lightgbm>=4.5",
    "torch>=2.4",
    "pytorch-forecasting>=1.1",
    "arch>=7.2",
    "statsmodels>=0.14",
]

# Backtest & portfolio deps are NOT installed by default on Windows because
# quantstats/empyrical have no win32 wheels. They are needed only from
# Phase 5 onward. Install explicitly when needed:
#   uv sync --extra backtest  (Linux/macOS)
#   On Windows, use WSL or skip these and use vectorbt's built-in reports.
backtest = [
    "backtesting>=0.3.3",
    "vectorbt>=0.26",
    "bt>=1.1",
    "riskfolio-lib>=7.0",
    "pyportfolioopt>=1.6",
    "quantstats>=0.0.62 ; sys_platform != 'win32'",
    "empyrical-reloaded>=0.5 ; sys_platform != 'win32'",
]

api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx2>=0.0.1 ; python_version >= '3.12'",
]

# Web extra — the 5-screen web app (Upload, Configure, Analyze, Result, Track).
# Server-rendered Jinja2 templates + vanilla fetch(); no SPA framework.
# Install with:  uv sync --extra web
web = [
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

experiment = [
    "mlflow>=2.18",
    "optuna>=4.0",
]

sentiment = [
    "transformers>=4.46",
    "torch>=2.4",
]

# Paper extra — for the deep paper rewrite. Static scientific figures
# (PDF + PNG) generated by paper/figures/generate_all.py. mplfinance is
# purpose-built for OHLCV candlestick charts. NOT installed by default;
# install with:  uv sync --extra paper
paper = [
    "matplotlib>=3.8",
    "mplfinance>=0.12",
    "seaborn>=0.13",
]

# CLI extra — interactive analysis dashboard and markdown reports.
# Install with:  uv sync --extra cli
cli = [
    "typer>=0.12",
    "plotly>=5.18",
    "kaleido>=0.2",
    "rich>=13.0",
]

[project.scripts]
kairon = "kairon.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kairon"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "PL",  # pylint
    "RUF", # ruff-specific
    "ANN", # flake8-annotations
    "ASYNC", # flake8-async
    "S",   # flake8-bandit
    "TCH", # flake8-type-checking
    "PT",  # flake8-pytest-style
]
ignore = [
    "PLR0913", # too many arguments — sometimes justified
    "PLR2004", # magic value — sometimes intentional
    "S101",    # use of assert — pytest uses this
    "UP042",   # str + Enum — Python idiom for string enums; pydantic handles it
    "TC001",   # application import in TYPE_CHECKING — moving doesn't help here
    "TC002",   # third-party import in TYPE_CHECKING — not useful in pure runtime modules
    "TC003",   # stdlib import in TYPE_CHECKING — we use them at runtime
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN", "PLR2004", "PLC0415", "RUF043", "PT011", "E501", "B017"]
"src/kairon/cli/**/*.py" = ["ANN"]
"src/kairon/features/**/*.py" = [
    "PLC0415",
    "N806",
    "PLR0124",
    "PLW0108",
    "E741",
    "E501",
    "SIM201",
    "SIM102",
]
"src/kairon/labels/**/*.py" = [
    "PLC0415",
    "E501",
    "PLR0124",
    "ANN201",
    "ANN202",
]
"src/kairon/models/**/*.py" = [
    "PLC0415",
    "E501",
    "PLR0124",
    "ANN201",
    "ANN202",
    "ANN401",
    "PLR2004",
    "B008",
    "ARG",
    "PTH",
    "SLF001",
    "N801",
    "N802",
    "N803",
    "RET",
    "TRY003",
    "UP038",
    "F401",
    "RUF012",
    "B904",
    "B006",
    "D",
    "C901",
    "PLR0912",
    "PLR0915",
    "PERF401",
    "RUF013",
    "F841",
    "E731",
    "UP046",
    "SIM",
    "PLR1714",
]
"src/kairon/splits/**/*.py" = [
    "PLC0415",
    "E501",
    "SIM108",
    "F401",
]
"src/kairon/backtest/**/*.py" = [
    "PLC0415",
    "E501",
    "PLR0124",
    "ANN201",
    "ANN202",
    "ANN401",
    "PLR2004",
    "B008",
    "ARG",
    "PTH",
    "SLF001",
    "N801",
    "N802",
    "N803",
    "RET",
    "TRY003",
    "UP038",
    "F401",
    "RUF012",
    "B904",
    "B006",
    "D",
    "C901",
    "PLR0912",
    "PLR0915",
    "PERF401",
    "RUF013",
    "F841",
    "E731",
    "UP046",
    "SIM",
    "PLR1714",
    "RUF002",
]
"src/kairon/api/**/*.py" = [
    "PLC0415",
    "E501",
    "PLR0124",
    "ANN201",
    "ANN202",
    "ANN401",
    "PLR2004",
    "B008",
    "ARG",
    "PTH",
    "SLF001",
    "N801",
    "N802",
    "N803",
    "RET",
    "TRY003",
    "UP038",
    "F401",
    "RUF012",
    "B904",
    "B006",
    "D",
    "C901",
    "PLR0912",
    "PLR0915",
    "PERF401",
    "RUF013",
    "F841",
    "E731",
    "UP046",
    "SIM",
    "PLR1714",
    "RUF002",
]
"src/kairon/paper/**/*.py" = [
    "PLC0415",
    "E501",
    "PLR0124",
    "ANN201",
    "ANN202",
    "ANN401",
    "PLR2004",
    "B008",
    "ARG",
    "PTH",
    "SLF001",
    "N801",
    "N802",
    "N803",
    "RET",
    "TRY003",
    "UP038",
    "F401",
    "RUF012",
    "B904",
    "B006",
    "D",
    "C901",
    "PLR0912",
    "PLR0915",
    "PERF401",
    "RUF013",
    "F841",
    "E731",
    "UP046",
    "SIM",
    "PLR1714",
    "RUF002",
]
"src/kairon/portfolio/**/*.py" = [
    "PLC0415",
    "E501",
    "PLR0124",
    "ANN201",
    "ANN202",
    "ANN401",
    "PLR2004",
    "B008",
    "ARG",
    "PTH",
    "SLF001",
    "N801",
    "N802",
    "N803",
    "RET",
    "TRY003",
    "UP038",
    "F401",
    "RUF012",
    "B904",
    "B006",
    "D",
    "C901",
    "PLR0912",
    "PLR0915",
    "PERF401",
    "RUF013",
    "F841",
    "E731",
    "UP046",
    "SIM",
    "PLR1714",
    "RUF002",
]
"src/kairon/live/**/*.py" = [
    "PLC0415",
    "E501",
    "PLR0124",
    "ANN201",
    "ANN202",
    "ANN401",
    "PLR2004",
    "B008",
    "ARG",
    "PTH",
    "SLF001",
    "N801",
    "N802",
    "N803",
    "RET",
    "TRY003",
    "UP038",
    "F401",
    "RUF012",
    "B904",
    "B006",
    "D",
    "C901",
    "PLR0912",
    "PLR0915",
    "PERF401",
    "RUF013",
    "F841",
    "E731",
    "UP046",
    "SIM",
    "PLR1714",
    "RUF002",
    "BLE001",
    "S112",
    "B027",
]
"src/kairon/store/**/*.py" = [
    "PLC0415",
    "E501",
    "PLR0124",
    "ANN201",
    "ANN202",
    "ANN401",
    "PLR2004",
    "B008",
    "ARG",
    "PTH",
    "SLF001",
    "N801",
    "N802",
    "N803",
    "RET",
    "TRY003",
    "UP038",
    "F401",
    "RUF012",
    "B904",
    "B006",
    "D",
    "C901",
    "PLR0912",
    "PLR0915",
    "PERF401",
    "RUF013",
    "F841",
    "E731",
    "UP046",
    "SIM",
    "PLR1714",
    "RUF002",
]
"src/kairon/config/**/*.py" = [
    "PLC0415",
    "E501",
    "PLR0124",
    "ANN201",
    "ANN202",
    "ANN401",
    "PLR2004",
    "B008",
    "ARG",
    "PTH",
    "SLF001",
    "N801",
    "N802",
    "N803",
    "RET",
    "TRY003",
    "UP038",
    "F401",
    "RUF012",
    "B904",
    "B006",
    "D",
    "C901",
    "PLR0912",
    "PLR0915",
    "PERF401",
    "RUF013",
    "F841",
    "E731",
    "UP046",
    "SIM",
    "PLR1714",
    "RUF002",
]

[tool.ruff.lint.isort]
known-first-party = ["kairon"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Pyright (strict)
# ---------------------------------------------------------------------------
[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__", "**/.venv", "**/node_modules"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingImports = "error"
reportMissingTypeStubs = "warning"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
reportUnknownMemberType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownVariableType = "warning"
reportUnknownParameterType = "warning"
reportMissingTypeArgument = "warning"
reportPrivateImportUsage = "warning"
reportMissingParameterType = "warning"
useLibraryCodeForTypes = true
strict = ["src/kairon/**"]

# ---------------------------------------------------------------------------
# Mypy (defense in depth, optional)
# ---------------------------------------------------------------------------
[[tool.mypy.overrides]]
module = "kairon.*"
strict = true
disallow_untyped_decorators = true
warn_unused_ignores = true
warn_return_any = true
disallow_any_explicit = false

[[tool.mypy.overrides]]
module = ["ccxt.*", "pandas.*", "numpy.*", "backtesting.*", "vectorbt.*", "quantstats.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
markers = [
    "leakage: tests that ensure no future-leakage in labels or features",
    "slow: tests that take > 5 seconds",
    "integration: tests that hit external services",
    "unit: fast unit tests",
    "property: property-based tests using hypothesis",
    "asyncio: async test functions",
]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:ccxt.*",
    "ignore::DeprecationWarning:pandas.*",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
source = ["src/kairon"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
]
